--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,15 +13,15 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.7
+          python-version: 3.9.12
 
       - name: Install dependencies with pipenv
         run: |
           pip install pipenv
           pipenv install --deploy --dev
 
-      - run: pipenv run isort --recursive --diff
+      - run: pipenv run isort --diff .
       - run: pipenv run black --check .
       - run: pipenv run flake8
       - run: pipenv run mypy
-      - run: pipenv run pytest --cov --cov-fail-under=100
+      - run: pipenv run pytest --cov
