--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,13 @@ pytelegrambotapi = "*"
 pickledb = "*"
 
 [dev-packages]
+black = "*"
+isort = "*"
+flake8 = "*"
+mypy = "*"
+pytest = "*"
+pytest-cov = "*"
+pre-commit = "*"
 
 [requires]
 python_version = "3.9.12"
