--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-# .github/workflows/test.yml
+# .github/workflows/tests.yml
 
 name: Test
 
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v3
         with:
-          python-version: 3.9.13
+          python-version: 3.9.12
 
       - name: Install dependencies with pipenv
         run: |
