--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ max-line-length = 88
 max-complexity = 18
 select = B,C,E,F,W,T4
 [mypy]
-files=app,test
+files=app,tests
 ignore_missing_imports=true
 [tool:pytest]
-testpaths = test
+testpaths = tests
